test(controllers): renovate conversation/books/admin remaining HTTP to small-test style
Fold mock-heavy QGen resume into real controller assertions; split oversized conversation suite by capability.

Co-authored-by: Cursor <cursoragent@cursor.com>